# motion-detection

./: .gitignore  CMakeLists.txt  Makefile  README.md  camera_input.cpp  cmake_install.cmake  frame_process.cpp  frame_process.h  kmeans.cpp  kmeans.h  main  main.cpp
