cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( main camera_input.cpp )
add_executable( image frame_process.cpp )
target_link_libraries( main ${OpenCV_LIBS} )
target_link_libraries( image ${OpenCV_LIBS} )